--- a/Coffee/DESCRIPTION
+++ b/Coffee/DESCRIPTION
@@ -1,11 +1,10 @@
-Package: Coffee
-Type: Package
-Title: Squares Data
-Version: 0.1.0
-Author: Erin Bugbee, Sarah Fringer, Amy Liu
-Maintainer: <erin_bugbee@brown.edu> <sarah_fringer@brown.edu> <amy_liu@brown.edu> 
-Description: Squares some data
-License: GPL-2
+Package: coffee
+Title: What the Package Does (one line, title case)
+Version: 0.0.0.9000
+Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Description: What the package does (one paragraph).
+Depends: R (>= 3.4.1)
+License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 6.1.0.9000
