--- a/coffee/DESCRIPTION
+++ b/coffee/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: coffee
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: Erin Bugbee, erin_bugbee@brown.edu ("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Erin", "Bugbee", email = "erin_bugbee@brown.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 6.1.0.9000
