--- a/coffee/NAMESPACE
+++ b/coffee/NAMESPACE
@@ -3,5 +3,5 @@
 export(cat_function)
 export(clean_tweets)
 export(get_tweets)
-export(make_bar_graph1)
+export(make_bar_graph)
 export(make_wordcloud)
